Startpage alignment fix?

--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ body .container h2 {
 
 
 /* Startpage */
-body.startpage {
+html, body.startpage {
   background: var(--color-base);
   color: var(--color-teal);
   font-family: "JetBrains Mono Medium";
